# ityl-character-manager

./: .gitignore  README.md  characters_provider.cpp  characters_provider.h  ityl_qtquick.pro  main.cpp  qml.qrc  qml_types_factory.cpp  qml_types_factory.h  sonar-project.properties
src/: CMakeLists.txt  characters_manager.cpp  characters_manager.h  characters_provider.cpp  characters_provider.h  ityl_character_manager.pro  main.cpp  q_custom_gui_application.cpp  qml.qrc  qml_types_factory.cpp  qml_types_factory.h
src/Ityl.Business/: CMakeLists.txt
src/Ityl.Business/models/: grouped_characters.h
src/Ityl.Business/providers/: characters_provider.cpp  characters_provider.h  groups_provider.cpp  groups_provider.h
src/Ityl.Business/services/: relationship_validator_service.cpp  relationship_validator_service.h
src/Ityl.Character.Manager/: CMakeLists.txt  ityl_ui_plugin.cpp  ityl_ui_plugin.h  main.cpp  q_custom_gui_application.h  qml.qrc  qml_types_factory.cpp  qmldir  qtquickcontrols2.conf
src/Ityl.Character.Manager/converters/: converters.cpp  converters.h  ui_model_converters.cpp  ui_model_converters.h
src/Ityl.Character.Manager/models/character/: filtering_data.h  filtering_type.h  grouped_ui_characters.h
src/Ityl.Character.Manager/settings/: app_config.json
src/Ityl.Character.Manager/ui/: AffiliationsView.qml  AvatarView.qml  CharacterCompactView.qml  CharacterListView.qml  CharacterMinimizedView.qml  CharacterView.qml  DescriptionView.qml  GroupPartView.qml  GroupView.qml  HomeCategoryView.qml  HomeView.qml  IdentityView.qml  LinkButton.qml  MaterialIcons.js  RelationshipsView.qml  TabBarComponent.qml  main.qml
src/Ityl.Character.Manager/uiModels/: settings_ui_manager.cpp  settings_ui_manager.h  tab_content_ui_collection.h
src/Ityl.Character.Manager/uiModels/character/: character_ui_model.cpp  character_ui_model.h  characters_ui_collection.cpp  characters_ui_collection.h  characters_ui_manager.cpp  characters_ui_manager.h  relationship_ui_model.cpp  relationship_ui_model.h  skill_ui_model.cpp  (+1 more)
src/Ityl.Core/: CMakeLists.txt
src/Ityl.Core/back_api/: character_provider.h
src/Ityl.Core/front_api/: character_api.h
src/Ityl.Core/model/: character.cpp  character.h  group.cpp  group.h  group_info.cpp  group_info.h  group_part.cpp  group_part.h  group_type.h  relationship.h  skill.cpp  skill.h  status.h
src/Ityl.Core/service/: character_service.cpp  character_service.h
src/Ityl.DataModel/: CMakeLists.txt
src/Ityl.DataModel/character/: character.h
src/Ityl.DataModel/config/: app_config.cpp  app_config.h
src/Ityl.DataModel/converters/: data_model_converters.cpp  data_model_converters.h
src/Ityl.DataModel/group/: group.cpp  group.h  group_info.cpp  group_info.h  group_type.h
src/Ityl.DataModel/homeView/: home_category.h
src/Ityl.Json/: CMakeLists.txt
src/Ityl.Json/adapter/: character_adapter.cpp  character_adapter.h
src/Ityl.Json/model/: avatar_dto.cpp  avatar_dto.h  character_dto.cpp  character_dto.h  group_dto.cpp  group_dto.h  json_model_mapper.cpp  json_model_mapper.h  relationship_dto.cpp  relationship_dto.h  skill_dto.cpp  skill_dto.h
src/Ityl.Json/provider/: json_character_provider.cpp  json_character_provider.h  json_item_provider.cpp  json_item_provider.h
src/Ityl.JsonReader/: CMakeLists.txt
src/Ityl.JsonReader/reader/: character_reader.cpp  character_reader.h  group_reader.cpp  group_reader.h  home_view_reader.cpp  home_view_reader.h  json_reader_helpers.cpp  settings_reader.cpp
src/Ityl.UI/: CMakeLists.txt
src/Ityl.UI/model/: tab_content_ui_collection.cpp
src/UnitTests/: CMakeLists.txt
src/UnitTests/Ityl.Json.UnitTests/: CMakeLists.txt  character_dto_tests.cpp  character_dto_tests.h  json_character_provider_tests.cpp  json_character_provider_tests.h
src/businessModel/: grouped_characters.h
src/converters/: converters.cpp  converters.h
src/dataModel/: app_config.cpp  app_config.h  character.cpp  character.h  relationship.h
src/dataModel/character/: character.cpp  character.h
src/dataModel/group/: group.cpp  group.h  group_info.cpp  group_info.h  group_part.cpp  group_part.h
src/dataModel/homeView/: home_view.cpp
src/dataModel/skill/: skill.cpp
src/mock/: colors.json  home_view.json  related_relationships.json
src/mock/characters/: character1.json  character2.json  character3.json  character4.json
src/mock/groups/: ethnie1.json  group1.json  group2.json  group3.json  group4.json  guild1.json
src/model/: character_model.cpp  character_model.h  relationship_model.cpp  relationship_model.h  skill_model.cpp  skill_model.h
src/model/qObjectWrapper/: characters_wrapper.cpp  characters_wrapper.h  relationships_wrapper.cpp  relationships_wrapper.h  skills_wrapper.cpp  skills_wrapper.h
src/provider/: characters_provider.cpp  characters_provider.h  groups_provider.cpp  groups_provider.h
src/reader/: character_reader.cpp  character_reader.h  group_reader.cpp  group_reader.h  home_view_reader.cpp  home_view_reader.h  json_reader_helpers.cpp  json_reader_helpers.h  settings_reader.cpp  settings_reader.h
src/services/: relationship_validator_service.h
src/settings/: app_config.json
src/ui/: AffiliationsView.qml  CharacterListView.qml  CharacterView.qml  GroupPartListView.qml  GroupPartView.qml  GroupView.qml  HomeCategoryView.qml  LinkButton.qml  QuickNavigation.qml  main.qml  qml.qrc
src/uiModel/: character_ui_model.cpp  character_ui_model.h  characters_ui_collection.cpp  characters_ui_collection.h  relationship_ui_model.cpp  settings_ui_manager.cpp  settings_ui_manager.h  skill_ui_model.h
src/uiModel/character/: character_ui_model.cpp  character_ui_model.h  characters_ui_collection.cpp  characters_ui_collection.h  characters_ui_manager.cpp  characters_ui_manager.h  filtering_data.h  grouped_ui_characters.h  relationship_ui_model.h
src/uiModel/group/: group_info_ui_model.cpp  group_info_ui_model.h  group_part_ui_model.cpp  group_part_ui_model.h  group_ui_model.cpp  group_ui_model.h  groups_ui_manager.cpp  groups_ui_manager.h
src/uiModel/homeView/: home_view_ui_model.cpp  home_view_ui_model.h
(+86 files in other folders)
